--- a/leetcode/test1.html
+++ b/leetcode/test1.html
@@ -8,21 +8,62 @@
 </head>
 <body>
     <script>
-    var lastStoneWeight = function(stones) {
-      let len=stones.length
-      for(let i=0;i<len;i++){
-      stones.sort((a,b)=>{
-              return b-a
-          })
-      let  res=stones[1]-stones[0]
-      len=stones.length
-      if(len==1){
-        return stones[0]
-      }
-      }
+  //   var lastStoneWeight = function(stones) {
+  //     let len=stones.length
+  //     for(let i=0;i<len;i++){
+  //     stones.sort((a,b)=>{
+  //             return b-a
+  //         })
+  //     let  res=stones[1]-stones[0]
+  //     len=stones.length
+  //     if(len==1){
+  //       return stones[0]
+  //     }
+  //     }
     
-  };
-  console.log(lastStoneWeight([2,7,4,1,8,1]))
+  // };
+  // console.log(lastStoneWeight([2,7,4,1,8,1]))
+//   var allCellsDistOrder = function(R, C, r0, c0) {
+//     let arr=[[]];
+//         for(let r=0;r<r0;r++ ){
+//         for(let c=0;c<c0;c++){
+//             arr=arr[r][c]
+//         }
+//     }
+//     return arr
+// };
+// allCellsDistOrder(2, 3,1,2)
+
+// var missingNumber = function(nums) {
+/**
+ * 1.得到数组里最大值
+ * 2.得到0-最大值区间的数
+ * 3.nums里的数与得到的数比较，在得到的数里面找不到nums,则输出找不到的那个数
+ */
+//     nums.sort((a,b)=>a-b)
+//     let max=nums[nums.length-1]
+//     let per=[]
+//     let res=[]
+//     for(let i=0;i<=max;i++){
+//         per.push(i)
+//     }
+//     console.log(per)
+//     for(const p of per){
+//         for(let i=0;i<=nums.length;i++){
+//             if(p!=nums[i]){
+//                 res.push(p)
+//             }else continuess
+//         }
+//     }
+//     return res
+// };
+// console.log(missingNumber([3,0,1]))
+var missingNumber = function(nums, l = nums.length) {
+    var h = nums.reduce((h, num)=> (h[num] = 1, h), {}), i = nums.length + 1
+    while(i--) if(!h[i]) return i
+};
+console.log(missingNumber([3,0,1]))
+
     </script>
 </body>
 </html>
