--- a/leetcode/test1.html
+++ b/leetcode/test1.html
@@ -58,12 +58,17 @@
 //     return res
 // };
 // console.log(missingNumber([3,0,1]))
-var missingNumber = function(nums, l = nums.length) {
-    var h = nums.reduce((h, num)=> (h[num] = 1, h), {}), i = nums.length + 1
-    while(i--) if(!h[i]) return i
-};
-console.log(missingNumber([3,0,1]))
-
+// var missingNumber = function(nums, l = nums.length) {
+//     var h = nums.reduce((h, num)=> (h[num] = 1, h), {}), i = nums.length + 1
+//     while(i--) if(!h[i]) return i
+// };
+// console.log(missingNumber([3,0,1]))
+function sum(n){
+    if(n==1) return 1;
+    let b=sum(n-1) + n
+        return b;
+    }
+    sum(5)
     </script>
 </body>
 </html>
